<resources>
    <string name="app_name">Student eAid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download">Download</string>
    <string name="computer">Java is a general-purpose computer programming language that is concurrent, class-based, object-oriented,[13] and specifically designed to have as few implementation dependencies as possible. It is intended to let application developers write once, run anywhere (WORA),[14] meaning that compiled Java code can run on all platforms that support Java without the need for recompilation.[15] Java applications are typically compiled to bytecode that can run on any Java virtual machine (JVM) regardless of computer architecture</string>
    <string name="lecturer">Lecturer:</string>
    <string name="read_notes">Read Notes</string>
    <string name="engineering_math">Engineering Math</string>
    <string name="year_2">Year 2</string>
    <string name="type_message_here">Type Message Here</string>
    <string name="message">Message:</string>
    <string name="send">Send</string>
    <string name="username">Username</string>
    <string name="to">To:</string>
    <string name="_50">50%</string>
    <string name="choose_another_course">Choose another Course</string>
    <string name="engineering_maths_math_256">Engineering Maths Math 256</string>
    <string name="finish">Finish</string>
    <string name="retake_quiz">Retake Quiz</string>
    <string name="you_scored">You Scored:</string>
    <string name="type_message_her">Type Message Here</string>

    <string-array name="courses">
        <item>Bsc Information Technology</item>
        <item>Bsc Computer Engineering</item>
        <item>Bsc Telecommunication Engineering</item>
        <item>Bsc Administration</item>
        <item>Bsc Procurement and Logistics</item>
    </string-array>
</resources>
